--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Scripts\SceneManagement\LoadSceneOnClick.cs" />
     <Compile Include="Assets\Scripts\UI_Management\ActivateTextAtLine.cs" />
     <Compile Include="Assets\Scripts\UI_Management\CombatManager.cs" />
+    <Compile Include="Assets\Scripts\UI_Management\CombatTextManager.cs" />
     <Compile Include="Assets\Scripts\UI_Management\GameMenuManager.cs" />
     <Compile Include="Assets\Scripts\UI_Management\ScreenManager.cs" />
     <Compile Include="Assets\Scripts\UI_Management\TextBoxManager.cs" />
